--- a/user_table.html
+++ b/user_table.html
@@ -96,7 +96,7 @@
                         var story = document.createTextNode(actorInfo[stepsArray[i].ACTOR][j].STORY);
                         swiperSlide.appendChild(story);
                         //alert(actorInfo[stepsArray[i].ACTOR][0].IMAGE);
-                        swiperSlide.style.backgroundImage = "url(" + actorInfo[stepsArray[i].ACTOR][j].BACKGROUND_IMAGES + ")";
+                        swiperSlide.style.backgroundImage = "url(" + actorInfo[stepsArray[i].ACTOR][j].BACKGROUND_IMAGES[0] + ")";
                         swiperWrapper.appendChild(swiperSlide); 
                     }
 
@@ -122,6 +122,7 @@
                 };
                 return key;
             }
+
             function onShowButtonClick(){
                 document.getElementById("inputContainer").style.display="none";
                 var key = getKeyFromForm();
@@ -187,7 +188,13 @@
                         for (var j=0; j < rows; j++){
                             infoArray[j] = {};
                             for (var i=0; i < actorColumnNames.length; i++){
-                                infoArray[j][actorColumnNames[i]] = table.getValue(j,i);
+                                var value = table.getValue(j,i);
+                                if(actorColumnNames[i] == "BACKGROUND_IMAGES"){
+                                    var imageArray = parseImages(value);
+                                    infoArray[j][actorColumnNames[i]] = imageArray;
+                                } else {
+                                    infoArray[j][actorColumnNames[i]] = value;  
+                                } 
                             }
                         }
                         actorInfo[stepsArray[index].ACTOR] = infoArray; 
@@ -196,11 +203,17 @@
                             resolve("Info from actor ready");
                         }
                         else {
-                            reject(Error("No info from actor"));
+                            reject(Error("No info from actor " + index));
                         }
                     });
                 });
                 return actorPromise;
+            }
+
+            function parseImages(imageString){
+                imageArray = imageString.split(",");
+                alert("image array lenght" + imageArray.length);
+                return imageArray
             }
 
             function showError(error){
@@ -230,7 +243,6 @@
             .swiper-pagination-switch{display:inline-block;width:8px;height:8px;border-radius:8px;background:#222;margin-right:5px;opacity:0.8;border:1px solid #fff;cursor:pointer;}
             .swiper-visible-switch{background:#aaa;}
             .swiper-active-switch{background:#fff;}
-
         </style>
     </head>
     <body role="document" onload="initialize()">
