removed unused code

--- a/user_table.html
+++ b/user_table.html
@@ -20,7 +20,7 @@
         <style>
             html {height: 100%;}
             body {height: 100%;}
-            .swiper-container{min-height: 100%;}
+            .swiper-container{height: 100%;}
             .pagination{position:absolute;z-index:20;left:10px;bottom:10px;}
             .swiper-pagination-switch{display:inline-block;width:8px;height:8px;border-radius:8px;background:#222;margin-right:5px;opacity:0.8;border:1px solid #fff;cursor:pointer;}
             .swiper-visible-switch{background:#aaa;}
