--- a/user_table.html
+++ b/user_table.html
@@ -15,8 +15,8 @@
         <!-- Dependent on Swiper by iDangero.us -->
         <!-- Dependent on http://www.google.com/jsapi by Google -->
         <script type="text/javascript" src="script/urban_launchpad.card.js"></script>  
-        <script type="text/javascript">
-        </script>  
+        <!-- CSS formatting for the cards -->
+        <link rel="stylesheet" href="style/urban_launchpad.card.css">
         <style>
             html {height: 100%;}
             body {height: 100%;}
