--- a/user_table.html
+++ b/user_table.html
@@ -15,6 +15,9 @@
         <!-- Dependent on Swiper by iDangero.us -->
         <!-- Dependent on http://www.google.com/jsapi by Google -->
         <script type="text/javascript" src="script/urban_launchpad.card.js"></script>  
+        <!-- Raleway and Lora fonts -->
+        <link href='http://fonts.googleapis.com/css?family=Raleway:300,400,500' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
         <!-- CSS formatting for the cards -->
         <link rel="stylesheet" href="style/urban_launchpad.card.css">
         <style>
